--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My Blog</title>
     <link rel="stylesheet" href="./stylesheets/style.css" />
     <link rel="stylesheet" href="./stylesheets/form.css" />
-    <script src="./index.js" type="module" defer></script>
+    <script src="/index.js" type="module" defer></script>
   </head>
   <body>
     <header>
