--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   </head>
   <body>
     <header>
-      <h1>My Blog</h1>
+      <a class="header link" href="./index.html">
+        <h1>My Blog</h1>
+        <img src="./post-outline.svg" alt="" />
+      </a>
       <nav>
         <a class="navBtn" href="./index.html">Home</a>
       </nav>
